# speclens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  RELEASE.md  TODO.md  VISION.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ROADMAP.md
docs/design/: checks-and-claims.md
examples/ears-markdown-showcase/: config.json  history.json
examples/example1/: config.json  history.json
examples/example1/openspec/: config.yaml  schema.json
examples/example2/: config.json  history.json
examples/example3/: config.json  history.json
examples/example4/: config.json  history.json
examples/example5/: config.json  history.json
examples/example6/: config.json  history.json
examples/example6/adr/: 0001-postgres-for-catalog-metadata.md  0002-redis-for-bid-state-cache.md  0003-kafka-for-event-ingestion.md  0004-bid-engine-p99-latency-budget.md  0005-row-level-security-for-tenant-isolation.md  0006-scylladb-for-bid-state-cache.md  0007-last-click-attribution-default.md  0008-multi-touch-attribution.md  0009-schema-per-tenant-isolation.md
examples/example6/openspec/: config.yaml
examples/test-openspec-schemas/: config.json  history.json
examples/test-openspec-schemas/adr/: 0001-store-schemas-as-copyable-folders.md  (+4 more)
scripts/: create-release.js  extract-example-history.mjs  seed-example-git.mjs
src/: App.tsx  SplashScreen.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  appimage.rs  lib.rs  main.rs
src/comments/: CommentsPanel.tsx  SelectionPopover.tsx  mockComments.ts
src/lib/: ai.test.ts  ai.ts  aiDocSummary.test.ts  aiDocSummary.ts  aiSummaries.ts  aiSummary.test.ts  aiSummary.ts  changeFlow.ts  comments.ts  db.ts  documentSource.ts  documentStats.test.ts  documentStats.ts  earsKeywords.ts  exampleLoader.ts  extractHeadings.test.ts  extractHeadings.ts  highlight.ts  markdownPreview.ts  orphanDetection.ts  relativeTime.ts  repoCache.ts  repoLoader.ts  schema.ts  specChecks.test.ts  specChecks.ts  specChecksConfig.ts  stripDatePrefix.ts  tasksCompletion.test.ts  tasksCompletion.ts  updateCheck.test.ts  updateCheck.ts  useCurrentDocument.ts  useCurrentHeading.ts  useMinDelay.ts  useRepoSyncWatcher.ts
src/onboarding/: TutorialDialog.tsx
src/repos/: RepoConfigModal.tsx  RepositorySwitcher.tsx  addRepo.ts
src/search/: SearchPalette.tsx
src/sidebar/: AboutDialog.tsx  AiSettingsSection.tsx  AppSidebar.tsx  SidebarFooter.tsx
src/specs/: AiDocSummaryButton.tsx  AiSummaryPanel.tsx  AttributionLine.tsx  ChangeViewer.tsx  ChangesSidebar.tsx  DocumentStatsModal.tsx  DocumentStatsTooltip.tsx  MarkdownView.tsx  MermaidDiagram.tsx  MermaidLightbox.tsx  Minimap.tsx  SpecCapabilityViewer.tsx  SpecChecksBadge.tsx  SpecChecksPanel.tsx  specCheckJump.ts  useSpecChecks.ts
src/store/: bootstrap.ts  useAiStore.test.ts  useAiStore.ts  useAppStore.ts  useCommentsStore.ts
src/theme/: theme.ts
src/views/: AiSummaryCard.tsx  Breadcrumbs.tsx  ChangesView.tsx  ChecksView.tsx  ErrorBoundary.tsx  FlowView.tsx  FolderView.tsx  GraphView.tsx  OverviewView.tsx  RepoDocLayout.tsx  RepoDocList.tsx  SchemasView.tsx  SpecsView.tsx  TimelineView.tsx
website/: app.js  index.html  styles.css
(+162 files in other folders)
