[package]
name = "speclens"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "speclens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
# default-features = false drops the ssh/https transports (and their openssl
# dependency); vendored-libgit2 builds libgit2 from source so no system
# library is needed on any CI target or user machine.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[dev-dependencies]
tempfile = "3"

