[package]
name = "speclens"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "speclens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
# default-features = false drops the ssh/https transports (and their openssl
# dependency); vendored-libgit2 builds libgit2 from source so no system
# library is needed on any CI target or user machine.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
# Local-LLM support (src/ai.rs). reqwest is used from Rust only (model file
# downloads with streamed progress); rustls-tls avoids any openssl linkage,
# blocking keeps the download loop simple inside spawn_blocking.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
llama-cpp-2 = { version = "0.1.151", optional = true }
encoding_rs = { version = "0.8", optional = true }

# Metal-accelerated inference on macOS; everywhere else llama.cpp builds pure CPU.
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1.151", optional = true, features = ["metal"] }

[features]
# Off by default: llama-cpp-sys-2 compiles llama.cpp from source, which
# requires cmake on the build machine. Model download management always
# works; ai_generate returns a clear error unless built with this feature.
local-llm = ["dep:llama-cpp-2", "dep:encoding_rs"]

[dev-dependencies]
tempfile = "3"

